--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="subheading mb-5">BTM Layout · Bangalore · (+91) 8105263508 ·
           <a href="mailto:name@email.com">gops.mardi1@gmail.com</a>
         </div>
-        <p class="lead mb-5">Experienced software professional adept in organization and team management. Certified Blockchain developer,great experience in testing. Experiencedn in developing blockchain applications using solidity.</p>
+        <p class="lead mb-5">Experienced software professional adept in organization and team management. Certified Blockchain developer, great experience in testing. Experienced in developing blockchain applications using solidity.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/gopi-nath-marndi-a12459208/">
             <i class="fab fa-linkedin-in"></i>
